修复积分详情说明页面不能完整展示问题
scrollview和web-view不能在一个页面存在(其他组件也一样估计)

--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "pages/webview/webview",
     "pages/ranking/ranking",
     "pages/tipspage/index",
-    "pages/message/index"
+    "pages/message/index",
+    "pages/richtext/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
