体系页面完成数据填充
体系页面完成数据填充及详情展示

--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "pages": [
-   
+    "pages/my/index",
+    "pages/system/index",
+    "pages/subsystem/index",
     "pages/index/index",
     "pages/homesearch/homesearch",
     "pages/webview/webview",
-    "pages/my/index",
-    "pages/system/index",
+   
     "pages/answer/index",
     "pages/login/index",
     "pages/testdemo/index",
@@ -14,8 +15,8 @@
     "pages/tipspage/index",
     "pages/message/index",
     "pages/richtext/index",
-    "pages/collection/index"
-    
+    "pages/collection/index",
+    "pages/setting/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
